# SSH-Agent

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  start.sh  tasks.md
Docs/: acp_protocol_research.md
backend/: .env.example  acp_server.py  command_runtime.py  database.py  encryption.py  init_db.py  logger.py  main.py  mcp_tools.py  models.py  pyproject.toml  requirements.txt  schemas.py  ssh_executor.py  ws.py
backend/routers/: agents.py  chat.py  commands.py  memories.py  permissions.py  servers.py  sessions.py  settings.py  terminal.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/components/chat/: AgentSelector.jsx  ChatInput.jsx  ChatMessage.jsx  ChatPanel.jsx  DangerModeToggle.jsx  ModelSelector.jsx
frontend/src/components/commands/: CommandCard.jsx  CommandCardFooter.jsx  CommandGraph.jsx  CommandGroup.jsx
frontend/src/components/layout/: AppHeader.jsx  Navbar.jsx  PanelLayout.jsx  Sidebar.jsx
frontend/src/components/memories/: MemoriesTab.jsx  MemoryApprovalPrompt.jsx  MemoryItem.jsx
frontend/src/components/permissions/: PermissionRuleForm.jsx  WhitelistBlacklistManager.jsx
frontend/src/components/servers/: ServerCard.jsx  ServerForm.jsx  ServerList.jsx
frontend/src/components/terminal/: TerminalPanel.jsx
frontend/src/lib/: api.js  utils.js  websocket.js
frontend/src/pages/: Home.jsx  SessionsPage.jsx  SettingsPage.jsx  WorkspacePage.jsx
frontend/src/store/: useChatStore.js  useCommandStore.js  usePermissionStore.js  useServerStore.js  useSessionStore.js
