[project]
name = "ssh-agent-backend"
version = "0.1.0"
description = "SSH Agent Commander backend"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "cryptography>=46.0.6",
    "fastapi[all]>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scalar-fastapi>=1.8.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
